fix techs overflow and add pjdfstest project

--- a/sass/css/projects.scss
+++ b/sass/css/projects.scss
@@ -23,9 +23,10 @@
       }
       .techs {
         display: flex;
-        gap: .5rem;
+        gap: 0.5rem;
+        flex-wrap: wrap;
         .tech {
-          @include chip(.8rem);
+          @include chip(0.8rem);
         }
       }
       .desc {
